# yolo-openai-detector

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  NOTICE.md  README.md  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.txt
.github/workflows/: ci.yml
app/: README.md  auth.py  detection.py  errors.py  main.py  schemas.py
docs/: architecture.md  non-goals.md  openai-compatibility.md  requirements.md  response-schema.md
docs/work-orders/: PR1-inference-core.md  README.md
models/: README.md
scripts/: README.md  export_model.py
tests/: README.md  test_api.py  test_detection.py  test_repo_sanity.py
tests/fixtures/: README.md
