[project]
name = "cpu-yolo-openai-detect"
version = "0.1.0"
description = "CPU-only YOLO object detection served over an OpenAI-compatible API."
readme = "README.md"
requires-python = ">=3.11"

# Runtime dependencies. LEAN BY DESIGN: no torch, no ultralytics at runtime.
# Version floors are conservative; the first implementation PR (WO-01) must
# resolve, verify, and COMMIT A LOCKFILE with exact pinned versions.
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.7,<3.0",
    "onnxruntime>=1.18,<2.0",
    "pillow>=10.3,<12.0",
    "numpy>=1.26,<3.0",
]

[project.optional-dependencies]
# Dev/export tooling. ultralytics + torch live HERE ONLY (offline export, tests).
dev = [
    "ultralytics>=8.3",
    "pytest>=8.2,<9.0",
    "httpx>=0.27,<1.0",
    "openai>=1.30",
    "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
